--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
-    <groupId>com.gmail.jlmerrett.SimpleTreeCap</groupId>
-    <artifactId>SimpleTreeCap</artifactId>
-    <version>1.3.0</version>
+    <groupId>com.gmail.jlmerrett.BlankPlugin</groupId>
+    <artifactId>BlankPlugin</artifactId>
+    <version>0.0.1</version>
 
     <repositories>
         <repository>
