--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,9 +1,5 @@
-  name: SimpleTreeCap
-  main: com.gmail.jlmerrett.SimpleTreeCap.SimpleTreeCap
-  version: 1.3.0
+  name: BlankPlugin
+  main: com.gmail.jlmerrett.SimpleTreeCap.BlankPlugin
+  version: 0.0.1
   api-version: 1.18
   author: OffJosh
-  commands:
-    treecap:
-      description: Toggle the TreeCap plugin - will always start disabled.
-      usage: /treecap [enable|disable|query]
